# Special-needs-student-transport

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/optimization/: LNS.h  initialSolution.h
include/parameters/: hardcoded.h  optimization.h  others.h  random_generators.h
include/sideFunctions/: reporting.h  sorting.h
other/: Model 2.cpp  Model.cpp
src/: main.cpp
